# ml-dl

./: README.md
llm/: ngram.py
llm/gpt图解/c1/: 1.3ngram.py  1.5bag_of_word.py  requriements.txt
llm/gpt图解/c2/: 2.3skip_gram.py  get_start_pytorch.py  pytorch_install.md
llm/llama-index-proj/: app.py  config.py  pyproject.toml  rag_system.py
llm/novel/: reverse.py
llm/动手做ai-agent/: requirements.txt
llm/动手做ai-agent/c2/: 2.5react.py  ollama.ipynb
llm/动手做ai-agent/c3/: 3.1chat.py
