[project]
name = "llama-index-proj"
version = "0.1.0"
description = ""
authors = [
    {name = "meng.xiang",email = "xiangmeng.geo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "llama-index (>=0.12.22,<0.13.0)",
    "gradio (>=5.20.0,<6.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "llama-index-llms-ollama (>=0.5.2,<0.6.0)",
    "llama-index-embeddings-huggingface (>=0.5.2,<0.6.0)"
]

[tool.poetry]
packages = [{include = "llama_index_proj", from = "src"}]


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
